--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,7 @@
 @import "components/nav";
 @import "components/carousel";
 @import "components/cards";
+@import "components/quienes-somos";
 @import "components/form";
 @import "components/iframe";
 @import "components/footer";
