--- a/css/main.css
+++ b/css/main.css
@@ -177,28 +177,26 @@ html {
   width: 20vw;
 }
 
-.quienes-somos-flex {
-  display: flex;
-  flex-direction: column;
-}
 .quienes-somos-flex .img-quienes-somos {
   opacity: 0.3;
-  height: 50vh;
+  height: 60vh;
   overflow: hidden;
 }
 .quienes-somos-flex .text-quienes-somos-2 {
   color: #f5f6fa;
-  margin-left: 5%;
+  margin-left: 8%;
+  font-size: 1.25rem;
 }
 .quienes-somos-flex .text-quienes-somos-1 {
   color: #f5f6fa;
-  margin-right: 5%;
+  margin-right: 8%;
+  font-size: 1.25rem;
 }
 .quienes-somos-flex h1 {
   color: #f5f6fa;
 }
 .quienes-somos-flex .margin-text-quienes-somos-1 {
-  margin-top: 200px;
+  margin-top: 100px;
 }
 .quienes-somos-flex .margin-text-quienes-somos-2 {
   margin-top: 250px;
@@ -206,6 +204,7 @@ html {
 }
 .quienes-somos-flex .img-body-quienes-somos {
   overflow: hidden;
+  width: 100%;
 }
 
 .flex-form {
@@ -265,6 +264,7 @@ html {
   align-items: center;
   flex-direction: column;
   margin-top: 7%;
+  margin-bottom: 7%;
 }
 
 .iframe-title {
@@ -400,6 +400,37 @@ iframe {
     margin-top: 25px;
     height: 25rem;
     width: 90%;
+  }
+  .quienes-somos-flex .img-quienes-somos {
+    opacity: 0.3;
+    height: 30vh;
+    overflow: hidden;
+  }
+  .quienes-somos-flex .margin-text-quienes-somos-1 {
+    flex-wrap: wrap;
+    margin-top: 30px;
+  }
+  .quienes-somos-flex .margin-text-quienes-somos-2 {
+    flex-wrap: wrap;
+    margin-top: 100px;
+    margin-bottom: 50px;
+  }
+  .quienes-somos-flex .text-quienes-somos-2 {
+    color: #f5f6fa;
+    margin-left: 0;
+    font-size: 15px;
+    text-align: center;
+  }
+  .quienes-somos-flex .text-quienes-somos-1 {
+    color: #f5f6fa;
+    margin-right: 0;
+    font-size: 15px;
+    text-align: center;
+  }
+  .quienes-somos-flex .img-body-quienes-somos {
+    align-self: center;
+    overflow: hidden;
+    width: 75%;
   }
 }
 @media (min-width: 769px) and (max-width: 991px) {
@@ -552,6 +583,34 @@ iframe {
     margin-top: 25px;
     height: 25rem;
     width: 70%;
+  }
+  .quienes-somos-flex .img-quienes-somos {
+    opacity: 0.3;
+    height: 30vh;
+    overflow: hidden;
+  }
+  .quienes-somos-flex .margin-text-quienes-somos-1 {
+    margin-top: 30px;
+  }
+  .quienes-somos-flex .margin-text-quienes-somos-2 {
+    margin-top: 100px;
+    margin-bottom: 50px;
+  }
+  .quienes-somos-flex .text-quienes-somos-2 {
+    color: #f5f6fa;
+    margin-left: 8%;
+    font-size: 1rem;
+    text-align: end;
+  }
+  .quienes-somos-flex .text-quienes-somos-1 {
+    color: #f5f6fa;
+    margin-right: 8%;
+    font-size: 1rem;
+    text-align: start;
+  }
+  .quienes-somos-flex .img-body-quienes-somos {
+    overflow: hidden;
+    width: 100%;
   }
 }
 .grid-lg-1 {
