--- a/scss/components/_quienes-somos.scss
+++ b/scss/components/_quienes-somos.scss
@@ -1,26 +1,25 @@
 
 .quienes-somos-flex{
-    display: flex;
-    flex-direction: column;
     .img-quienes-somos{
         opacity: 0.30;
-        height: 50vh;
+        height: 60vh;
         overflow: hidden;
     }
     .text-quienes-somos-2{
         color: $text-color;
-        margin-left: 5%;
+        margin-left: 8%;
+        font-size: 1.25rem;
     }
     .text-quienes-somos-1{
         color: $text-color;
-        margin-right: 5%;
+        margin-right: 8%;
+        font-size: 1.25rem;
     }
-
     h1{
         color: $text-color;
     }
     .margin-text-quienes-somos-1{
-        margin-top: 200px;
+        margin-top: 100px;
     }
     .margin-text-quienes-somos-2{
         margin-top: 250px;
@@ -28,6 +27,7 @@
     }
     .img-body-quienes-somos{
         overflow: hidden;
+        width: 100%;
     }
 }
 
