Cambios de prolijidad

--- a/scss/utilities/_var.scss
+++ b/scss/utilities/_var.scss
@@ -7,6 +7,7 @@ $card-home: #252323;
 $btn-home: linear-gradient(180deg, rgba(37,35,35,1) 0%, rgba(37,35,35,1) 82%, rgba(3,139,167,1) 100%);
 $bg-form: linear-gradient(180deg, rgba(37,35,35,1) 0%, rgba(37,35,35,1) 60%, rgba(3,139,167,1) 100%);
 $btn:#038ba7;
+$bg-nav-form:#262424;
 
 
 // Height 
