--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -26,7 +26,7 @@
     width: 100%;
     height: 22vw;
     flex-direction: column;
-    background-color: #262424;
+    background-color: $bg-nav-form;
     color: $text-color;
     transition: 0.4s;
     box-shadow: inset;
@@ -36,8 +36,7 @@
 }
 
 .bg-nav-form{
-    background-color: #262424;
-
+    background-color: $bg-nav-form;
 }
 
 .main-form{
