--- a/css/main.css
+++ b/css/main.css
@@ -305,21 +305,12 @@ iframe {
     object-fit: fill;
   }
   .card-product-height {
-    height: 70%;
-    width: 100%;
+    height: 20rem;
+    width: 85%;
   }
   .card-img-mobile {
     overflow: hidden;
     height: 100%;
-  }
-  .title-size {
-    display: none;
-  }
-  .card-body-auriculares {
-    height: 10%;
-  }
-  .card-body-auriculares h2 {
-    display: none;
   }
   .card-body-auriculares a {
     font-size: 10px;
@@ -328,15 +319,8 @@ iframe {
     justify-content: center;
   }
   .btn-size-auriculares {
-    width: 50px;
-  }
-  .container-grid-lg {
-    display: grid;
-    grid-template-areas: "teclado1 teclado2" "teclado3 teclado4";
-  }
-  .container-grid-lg-auris {
-    display: grid;
-    grid-template-areas: "auriculares1 auriculares2" "auriculares3 auriculares4";
+    width: 70px;
+    height: 1.5rem;
   }
   .btn-home-card {
     height: 3em;
@@ -387,6 +371,7 @@ iframe {
   }
   .carousel-item .img-carousel {
     height: 250px;
+    object-fit: contain;
   }
   .hover-form {
     width: 20em;
@@ -395,6 +380,9 @@ iframe {
   }
   .hover-form:hover {
     transform: none;
+  }
+  .hover-form .btn-form-mobile {
+    margin-bottom: 15px;
   }
   iframe {
     margin-top: 25px;
@@ -578,6 +566,9 @@ iframe {
   }
   .hover-form:hover {
     transform: none;
+  }
+  .hover-form .btn-form-mobile {
+    margin-bottom: 15px;
   }
   iframe {
     margin-top: 25px;
