--- a/scss/components/_media-queries.scss
+++ b/scss/components/_media-queries.scss
@@ -26,8 +26,8 @@
    
     //Cards of Products
     .card-product-height{ 
-        height: 70%;
-        width: 100%;
+        height: 20rem;
+        width: 85%;
         }
 
    .card-img-mobile{
@@ -35,38 +35,17 @@
         height: 100%;
    }
 
-    .title-size{
-        display: none;
-    }
-
     .card-body-auriculares{
-        height: 10%;
-        h2{
-            display: none;
-        }
         a{
-           font-size: 10px;
+            font-size: 10px;
             text-align: center;
             overflow: hidden;
             justify-content: center;
         }
     }
     .btn-size-auriculares{
-        width: 50px;
-    }
-    
-    .container-grid-lg{
-        display: grid;
-        grid-template-areas:
-         "teclado1 teclado2"
-        "teclado3 teclado4";
-    }
-
-    .container-grid-lg-auris{
-        display: grid;
-        grid-template-areas:
-         "auriculares1 auriculares2"
-        "auriculares3 auriculares4";
+        width: 70px;
+        height: 1.5rem;
     }
 
     //Index Cards
@@ -121,6 +100,7 @@
     .carousel-item{
         .img-carousel{
             height: 250px;
+            object-fit: contain;
         }
     }
 
@@ -131,6 +111,9 @@
         transition: none;
         &:hover{
             transform: none;
+        }
+        .btn-form-mobile{
+            margin-bottom: 15px;
         }
     }
     //Iframe
@@ -366,6 +349,9 @@
         transition: none;
         &:hover{
             transform: none;
+        }
+        .btn-form-mobile{
+            margin-bottom: 15px;
         }
     }
     //Iframe
