--- a/scss/components/_media-queries.scss
+++ b/scss/components/_media-queries.scss
@@ -143,6 +143,7 @@
             color: $text-color;
             margin-left: 0;
             font-size: 15px;
+            margin-top: 10px;
             text-align: center;
         }
         .text-quienes-somos-1{
